...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fragment_content__image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:layout_marginStart="20dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_content__text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/lorem_ipsum2"
                android:textSize="20sp"
...
