<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_preview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.preview.QuestPreviewFragment"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

...
                    app:layout_constraintVertical_bias="0.0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_preview__playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorPrimary"
            android:contentDescription="@string/play_button"
            android:src="@drawable/ic_play_black_24dp"
            app:borderWidth="0dp"
...
